--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packagesToScan=com.qmclouca.base.controllers
 
-jwt.secret=minha_chave
-app.jwttoken.message=your_message_here
