--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@ spring.profiles.active=development
 server.port=8080
 
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packagesToScan=com.qmclouca.base.controllers
 springdoc.swagger-ui.operationsSorter=method
 
-jwt.secret=minha_chave
-app.jwttoken.message=your_message_here
+# JWT Configuration
+jwt.secret=your_secret_key
+jwt.expiration=3600000
+
+
+
+
+
