geração de token e todas as rotas de notes funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packagesToScan=com.qmclouca.base.controllers
 springdoc.swagger-ui.operationsSorter=method
 
+spring.main.allow-bean-definition-overriding=true
+
 # JWT Configuration
 jwt.secret=your_secret_key
 jwt.expiration=3600000
